--- a/site/content/collections/business-location/2016-08-09.manhattan.md
+++ b/site/content/collections/business-location/2016-08-09.manhattan.md
@@ -1,7 +1,6 @@
-city: Manhattan
 address: 228 E. 45th St., New York, NY 10017
-state:
-  - fd839cfb-89ad-41d0-b6b1-7c3946baa4d8
+state: b7a21cad-a2a6-4acf-8f0e-8c3f85cf4d84
+city: Manhattan
 lat: 40.751971
 lon: -73.971771
 phone1: 718-906-5300
