--- a/site/content/collections/business-location/2016-08-09.marina_del_rey.md
+++ b/site/content/collections/business-location/2016-08-09.marina_del_rey.md
@@ -1,8 +1,11 @@
-state:
-  - 5b38566e-1968-4f9d-9524-bacdc66525ca
-city: Marina del Rey
-lat: 33.990020
-lon:  -118.440334
 address: 4133 Redwood Ave., Suite 2026, Los Angeles, CA 90066
+phone_number1: (800) 660-1125
+phone_number2: (714) 550-5050
+fax1: (800) 378-8588
+fax2: (714) 550-5051
+state: 5b38566e-1968-4f9d-9524-bacdc66525ca
+city: Marina del Rey
+lat: "33.990020"
+lon: -118.440334
 title: Marina del Rey
 id: 915f46a1-c497-497d-8489-ddb744650dbc
