--- a/site/content/collections/business-location/2016-08-09.santa_ana.md
+++ b/site/content/collections/business-location/2016-08-09.santa_ana.md
@@ -1,9 +1,8 @@
-city: Santa Ana
 address: 2002 E McFadden Suite 100, Santa Ana,CA 92705
 fax1: 800-378-8588
 fax2: 714-550-5051
-state:
-  - 31bc8878-d1f0-4518-b085-9c95888ca62b
+state: 5b38566e-1968-4f9d-9524-bacdc66525ca
+city: Santa Ana
 lat: 33.733003
 lon: -117.838094
 phone1: 800-660-1125
